Renaming pom attributes in line with project name

--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.taxdoo.api</groupId>
-    <artifactId>rest-assured-testing</artifactId>
+    <groupId>com.taxdoo.booking</groupId>
+    <artifactId>taxdoo-api-automation</artifactId>
     <version>1.0</version>
 
     <properties>
